added life folder, lots of pretty pictures

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ hr{
 	background: #ffffff;
 	margin-top: 20px;
 	margin-left: 20px;
-	border-radius: 3px;
+	er-radius: 3px;
 	border: 3px inset;
 	overflow: auto;
 	position: relative;
