--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body{
 	font-family: Consolas, monaco, monospace;
 	font-size: 100%;
-	padding-top: 75px;
+	padding-top: 50px;
 	background-image: url(/assets/windows_xp_bliss.jpg);
 	background-size: cover;
 	color: #000000;
@@ -65,8 +65,8 @@ hr{
 	float: left;
 	height: 350px;
 	width: 300px;
-	left: 100px;
-	top: 85px;
+	left: 120px;
+	/* top: 20px; */
 	border: 3px #195CE1 solid;
 	background: #ECE9DA;
 	position: absolute;
@@ -77,7 +77,7 @@ hr{
 	float: left;
 	height: 200px;
 	width: 300px;
-	left: 100px;
+	left: 120px;
 	top: 395px;
 	border: 3px #195CE1 solid;
 	background: #ECE9DA;
