--- a/css/diary.css
+++ b/css/diary.css
@@ -18,6 +18,7 @@ body {
 h1 {
   font-size: 4rem;
   margin-bottom: 1rem;
+  margin-top: 0rem;
   text-transform: uppercase;
 }
 p {
@@ -32,6 +33,11 @@ a:visited {
 a:active,
 a:focus,
 a:hover {
+  background-color: #14fdce;
+  color: #031e11;
+}
+
+#next:hover {
   background-color: #14fdce;
   color: #031e11;
 }
