--- a/css/diary.css
+++ b/css/diary.css
@@ -92,6 +92,29 @@ a:hover {
   background: #031e11;
 }
 
+.locator{
+  border-radius: 2rem;
+  border: 1rem solid;
+  border-bottom-color: #121212;
+  border-left-color: #080808;
+  border-right-color: #080808;
+  border-top-color: #020202;
+  box-shadow: inset 0 0 18rem black,
+    inset 0 0 3rem black,
+    0 0 10rem black;
+	float: left;
+	height: 300px;
+	width: 310px;
+  left: 120px;
+  top: 370px;
+  position: absolute;
+  background: #031e11;
+}
+
+.compass {
+  height: 180px;
+}
+
 .header-bar{
 	height: 30px;
 	border-top-left-radius: 5px;
